<resources>
    <string name="app_name">Team 7</string>
    <string name="app_key">AIzaSyDZGMj6l2LURq4wCh0zcJMGprW7E_LLK5E</string>
    <string-array name="themes">
        <item>Choose A Theme</item>
        <item>UIUC</item>
        <item>UArizona</item>
        <item>LSU</item>
    </string-array>
    <string name="login_error">Wrong username or password!</string>
</resources>

